# TaDS

./: .gitignore  README.md
lab_01/: CMakeLists.txt
lab_01/inc/: constants.h  errors.h  input_output.h  long_math.h  structs.h  validation.h
lab_01/src/: input_output.c  long_math.c  main.c  validation.c
lab_02/: CMakeLists.txt  makefile
lab_02/datas/: composers.txt  countries.txt  creat_datas.py  data.txt  musicals.txt  plays.txt  test_data_100.txt  test_data_1000.txt  test_data_250.txt  test_data_50.txt  test_data_500.txt  theaters.txt
lab_02/func_tests/: neg_04_con.txt  neg_out.txt  out.txt  pos_test.sh  readme.md
lab_02/func_tests/data/: 1.py  neg_01_args.txt  neg_03_args.txt  neg_06_args.txt  neg_07_args.txt  pos_01_args.txt  pos_02_args.txt  pos_02_out.txt  pos_03_args.txt  pos_04_args.txt  pos_04_out.txt  pos_05_args.txt  pos_05_out.txt
lab_02/func_tests/scripts/: comparator.sh  compare_nums.py  neg_case.sh  pos_case.sh
lab_02/inc/: constants.h  data_types.h  io.h  load_data.h  measurements.h  menu.h  read.h  sort.h  table.h
lab_02/src/: io.c  load_data.c  main.c  measurements.c  menu.c  read.c  sort.c  table.c
lab_02/unit_tests/: CMakeLists.txt  check_array.c  check_file.c  check_main.c  check_sort.c
lab_03/: CMakeLists.txt  Esin Denis IU7-36B lab 3.docx  res_file_format.txt  results.txt
lab_03/datas/data/: creat_data.py  mtr_100_1.txt  mtr_100_10.txt  mtr_100_100.txt  mtr_100_11.txt  mtr_100_12.txt  mtr_100_13.txt  mtr_100_14.txt  mtr_100_15.txt  mtr_100_16.txt  mtr_100_17.txt  mtr_100_18.txt  mtr_100_19.txt  mtr_100_2.txt  (+774 more)
lab_03/inc/: constants.h  data_types.h  io.h  load_mtr.h  matrix_sparse.h  matrix_standard.h  measurements.h  menu.h
lab_03/src/: io.c  load_mtr.c  main.c  matrix_sparse.c  matrix_standard.c  measurements.c  menu.c
lab_08/: CMakeLists.txt  IU7_36B_Esin_TASD_lab_8.docx  res.dot  res_file_format.txt
lab_08/data/: example.txt  generate.py
lab_08/inc/: constants.h  data_types.h  graph.h  io.h  measurements.h  menu.h
lab_08/src/: graph.c  io.c  main.c  measurements.c  menu.c
(+21 files in other folders)
